Bug 334954 - Mouse pointer is shown as an arrow while moving or resizing a window
Summary: Mouse pointer is shown as an arrow while moving or resizing a window
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 5
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/121...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-17 18:09 UTC by Lasse Liehu
Modified: 2015-01-14 12:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.0
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lasse Liehu 2014-05-17 18:09:48 UTC
I wasn't sure if these are the same or a different bug and can create a report for each.

Reproducible: Always

Steps to Reproduce:
1a. Drag from title bar or by holding the modifier key (Alt) and dragging anywhere.
1b. Resize by dragging from window edge or by holding the modifier key and pressing right mouse button.
Actual Results:  
Arrow pointer is shown.

Expected Results:  
Drag or resize pointer is shown.
Comment 1 Martin Flöser 2014-05-19 05:42:51 UTC
which mouse cursor theme are you using?
Comment 2 Lasse Liehu 2014-05-19 06:06:41 UTC
I was using Breeze.

Did a bit more testing and was able to "fix" the issue by doing:
1. Change cursor theme to Oxygen Black
2. Click Apply – cursor theme is changed to Oxygen Black, but the issue is not fixed
3. Log in again – cursor theme is still Oxygen Black and the issue is fixed
4. Change cursor theme back to Breeze
5. Click Apply – cursor theme is changed to Breeze and the issue is fixed

However if I then:
1. Log out
2. Remove .cache5, .config, .config5 and .local5 from home directory
3. Log in – cursor theme is Breeze and the issue appears
4. Change cursor theme to Oxygen Black
5. Click Ok – cursor theme is not changed instantly; instead a message says that changes will take effect on next log in
6. Log in again – cursor theme is still Breeze and the issue still appears
Comment 3 Martin Flöser 2014-05-19 06:35:16 UTC
thanks for the investigation. That kind of matches with what I see: KWin falls 
back to the Oxygen cursor when resizing a window. So far I thought it's just a 
local issue, but given that bug report I think it's more general.
Comment 4 Martin Flöser 2014-05-19 13:43:55 UTC
The problem is related to the available sizes of the icon theme. Breeze only provides the size 32 and 64. My settings were resolution dependent. After changing to size 32 and restarting kwin the correct cursor was picked on resize and move.
Comment 5 Martin Flöser 2015-01-13 08:26:47 UTC
in addition to https://git.reviewboard.kde.org/r/121923/ Breeze also changed the available cursor sizes recently.
Comment 6 Martin Flöser 2015-01-14 12:56:01 UTC
Git commit ab4b1ba25a68274c4c2d4438570a5e39b16667df by Martin Gräßlin.
Committed on 08/01/2015 at 14:09.
Pushed by graesslin into branch 'Plasma/5.2'.

First try getting cursor theme from environment variable

If XCURSOR_THEME and XCURSOR_SIZE are set they are preferred over
reading the values from kcminputrc.

REVIEW: 121923
FIXED-IN: 5.2.0

M  +22   -5    cursor.cpp
M  +1    -0    cursor.h

http://commits.kde.org/kwin/ab4b1ba25a68274c4c2d4438570a5e39b16667df